--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/rapier": "^2.1.0",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -26,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "react-to-print": "^3.0.6",
     "tailwind-merge": "^3.1.0",
     "tailwind-variants": "^1.0.0",
     "three": "^0.175.0",
